# Juliaset

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
shaders/: FragmentShader.txt  VertexShader.txt
src/: main.cpp  shader.cpp  shader.h
